# biardtz

./: .coveragerc  .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE.txt  Makefile  Makefile.pi  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: RELEASE_v1.0.0.md  asyncio_guide.md  biardtz_guide.md  build_log.md  cheatsheet.md  conf.py  deployment_guide.md  index.md  pi_network_setup.md  test_plan.md  user_guide.md
scripts/: db_backup.py  db_export_csv.py  verify_install.py
src/biardtz/: __main__.py  api.py  audio_capture.py  bat_detector.py  cli.py  config.py  dashboard.py  detector.py  doa.py  geocode.py  health.py  logger.py  main.py  protocols.py  verifier.py
src/biardtz/templates/: _charts.html  _detections.html  _filter_bar.html  _health_panel.html  _stats.html  _tab_charts.html  _tab_live.html  _tab_species.html  base.html  index.html
src/biardtz/web/: __init__.py  db.py  health_checks.py  image_cache.py  routes.py
src/biardz/: __main__.py  api.py  cli.py
systemd/: biardtz.conf  biardtz.service  install.sh
tests/: conftest.py
tests/integration/: test_layout.py  test_pipeline.py
tests/system/: conftest.py  test_audio_smoke.py  test_cli_smoke.py  test_detector_real.py  test_pipeline_live.py  test_verify_install.py
tests/unit/: test_api.py  test_audio_capture.py  test_bird_search.py  test_cli.py  test_config.py  test_dashboard.py  test_detector.py  test_doa.py  test_dunder_main.py  test_geocode.py  test_health.py  test_health_checks.py  test_import.py  test_logger.py  test_main.py  test_verifier.py  test_web.py  test_web_db.py
