[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "biardtz"
dynamic = ["version"]
description = "Project scaffolded with PyScaffold Clickstart."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Kevin Steptoe" }]

# Runtime-only deps
dependencies = [
    "click>=8.1",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "aiosqlite>=0.20",
    "rich>=13",
    "tqdm",
    "librosa>=0.11",
    "resampy",
    "tensorflow>=2.20",
    "geopy>=2.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "Pillow>=11",
    "timezonefinder>=8",
]

[project.optional-dependencies]
# Dev extras: tests, coverage, linting, releases
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5",
    "sphinx>=7",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://example.com/biardtz"
Repository = "https://github.com/example/biardtz"

[project.scripts]
# For Clickstart-style CLIs; adapt or remove if the project has no CLI
biardtz = "biardtz.cli:cli"
biardtz-web = "biardtz.web:serve_standalone"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
biardtz = ["templates/*.html", "static/*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"
fallback_version = "0.0.0"
write_to = "src/biardtz/_version.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --disable-warnings"
testpaths = ["tests"]
markers = [
  "integration: filesystem/external-tool tests",
  "live: system tests requiring Pi hardware"
]

[tool.coverage.run]
branch = true
source = ["biardtz"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true


